build/errors/testdata/unknown-variable-suggestion.q
main() {
	mut length = 0
	lengt = 1
}
